--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/geojson": "^7946.0.2",
     "@types/leaflet": "^1.2.6",
     "angular2-jwt": "^0.2.3",
-    "bootstrap": "4.0.0-beta.2",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.3",
     "file-saver": "1.3.8",
     "hammerjs": "^2.0.8",
